--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,6 @@ Mustafa Ozuysal <mustafa.oezuysal@epfl.ch>
 
 Calibration code by:
 Andreas Geiger <andreas.geiger@googlemail.com>
+
+The Artvertiser application and modifications to Bazar by 
+Julian Oliver <julian@julianoliver.com>
