better makefiles 	modified:   Makefile_BUP 	modified:   artvertiser/Makefile_BUP

--- a/garfeild/.deps/ipltexture.Po
+++ b/garfeild/.deps/ipltexture.Po
@@ -1,19 +1,18 @@
 ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/sys/cdefs.h \
-  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
-  /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/bits/predefs.h \
+  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
+  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/ostream /usr/include/c++/4.3/ios \
   /usr/include/c++/4.3/iosfwd /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
-  /usr/include/bits/wchar.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
-  /usr/include/xlocale.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/xlocale.h \
+  /usr/include/bits/wchar2.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -28,16 +27,16 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/stdio.h /usr/include/bits/types.h \
-  /usr/include/bits/typesizes.h /usr/include/libio.h \
-  /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
+  /usr/include/libio.h /usr/include/_G_config.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
+  /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -47,7 +46,7 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h \
+  /usr/include/getopt.h /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -77,13 +76,15 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/waitstatus.h /usr/include/sys/types.h \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/sys/sysmacros.h /usr/include/alloca.h \
-  /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
-  /usr/include/math.h /usr/include/bits/huge_val.h \
-  /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
-  /usr/include/bits/inf.h /usr/include/bits/nan.h \
-  /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h \
-  /usr/include/bits/mathinline.h /usr/local/include/opencv/cxerror.h \
-  /usr/local/include/opencv/cvver.h /usr/local/include/opencv/cxcore.hpp \
+  /usr/include/bits/stdlib.h /usr/include/string.h \
+  /usr/include/bits/string3.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h /usr/include/math.h \
+  /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
+  /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
+  /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
+  /usr/include/bits/mathcalls.h /usr/include/bits/mathinline.h \
+  /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
+  /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
   /usr/local/include/opencv/cvcompat.h ../config.h /usr/include/GL/glew.h \
   /usr/include/GL/glu.h /usr/include/GL/gl.h
@@ -95,6 +96,8 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h:
 
 /usr/include/features.h:
+
+/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -120,19 +123,19 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
-
 /usr/include/xlocale.h:
+
+/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -168,8 +171,6 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstdio:
 
-/usr/include/stdio.h:
-
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -178,13 +179,13 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/_G_config.h:
 
-/usr/include/wchar.h:
-
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
+
+/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -203,6 +204,8 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
+
+/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -239,6 +242,8 @@ ipltexture.o: lightcalib/ipltexture.cpp /usr/include/c++/4.3/iostream \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
+
+/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -322,9 +327,13 @@ lightcalib/ipltexture.h:
 
 /usr/include/alloca.h:
 
+/usr/include/bits/stdlib.h:
+
 /usr/include/string.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+/usr/include/bits/string3.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
 
 /usr/include/math.h:
 
