--- a/garfeild/.deps/camera.Po
+++ b/garfeild/.deps/camera.Po
@@ -3,18 +3,17 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
   /usr/include/c++/4.3/iosfwd \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/sys/cdefs.h \
-  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
-  /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/bits/predefs.h \
+  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
+  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
-  /usr/include/bits/wchar.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
-  /usr/include/xlocale.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/xlocale.h \
+  /usr/include/bits/wchar2.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -29,16 +28,16 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/stdio.h /usr/include/bits/types.h \
-  /usr/include/bits/typesizes.h /usr/include/libio.h \
-  /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
+  /usr/include/libio.h /usr/include/_G_config.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
+  /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -48,7 +47,7 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h \
+  /usr/include/getopt.h /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -76,23 +75,24 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
   /usr/include/c++/4.3/i486-linux-gnu/bits/basic_file.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++io.h \
   /usr/include/c++/4.3/bits/fstream.tcc /usr/include/c++/4.3/iostream \
-  /usr/include/string.h calib/camera.h calib/matvec.h /usr/include/math.h \
-  /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
-  /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
-  /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
-  /usr/include/bits/mathcalls.h /usr/include/bits/mathinline.h \
-  /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
-  /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
-  /usr/include/stdlib.h /usr/include/bits/waitflags.h \
-  /usr/include/bits/waitstatus.h /usr/include/sys/types.h \
-  /usr/include/sys/select.h /usr/include/bits/select.h \
-  /usr/include/sys/sysmacros.h /usr/include/alloca.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/include/string.h /usr/include/bits/string3.h calib/camera.h \
+  calib/matvec.h /usr/include/math.h /usr/include/bits/huge_val.h \
+  /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
+  /usr/include/bits/inf.h /usr/include/bits/nan.h \
+  /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h \
+  /usr/include/bits/mathinline.h /usr/local/include/opencv/cv.h \
+  /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
+  /usr/include/assert.h /usr/include/stdlib.h \
+  /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
+  /usr/include/sys/types.h /usr/include/sys/select.h \
+  /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
+  /usr/include/alloca.h /usr/include/bits/stdlib.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h \
   /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
   /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
   /usr/local/include/opencv/cvcompat.h ../config.h /usr/include/GL/gl.h \
-  /usr/include/GL/glext.h /usr/include/inttypes.h
+  /usr/include/GL/glext.h
 
 /usr/include/c++/4.3/fstream:
 
@@ -107,6 +107,8 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h:
 
 /usr/include/features.h:
+
+/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -126,19 +128,19 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
-
 /usr/include/xlocale.h:
+
+/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -174,8 +176,6 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 
 /usr/include/c++/4.3/cstdio:
 
-/usr/include/stdio.h:
-
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -184,13 +184,13 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 
 /usr/include/_G_config.h:
 
-/usr/include/wchar.h:
-
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
+
+/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -209,6 +209,8 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
+
+/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -245,6 +247,8 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
+
+/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -314,6 +318,8 @@ camera.o: calib/camera.cpp /usr/include/c++/4.3/fstream \
 
 /usr/include/string.h:
 
+/usr/include/bits/string3.h:
+
 calib/camera.h:
 
 calib/matvec.h:
@@ -360,7 +366,9 @@ calib/matvec.h:
 
 /usr/include/alloca.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+/usr/include/bits/stdlib.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
 
 /usr/local/include/opencv/cxerror.h:
 
@@ -379,5 +387,3 @@ calib/matvec.h:
 /usr/include/GL/gl.h:
 
 /usr/include/GL/glext.h:
-
-/usr/include/inttypes.h:
