--- a/garfeild/.deps/planar_object_recognizer.Po
+++ b/garfeild/.deps/planar_object_recognizer.Po
@@ -1,22 +1,22 @@
 planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   /usr/include/sys/stat.h /usr/include/features.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
-  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
-  /usr/include/time.h /usr/include/bits/stat.h \
-  /usr/include/c++/4.3/fstream /usr/include/c++/4.3/istream \
-  /usr/include/c++/4.3/ios /usr/include/c++/4.3/iosfwd \
+  /usr/include/bits/predefs.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h /usr/include/bits/types.h \
+  /usr/include/bits/typesizes.h /usr/include/time.h \
+  /usr/include/bits/stat.h /usr/include/c++/4.3/fstream \
+  /usr/include/c++/4.3/istream /usr/include/c++/4.3/ios \
+  /usr/include/c++/4.3/iosfwd \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
-  /usr/include/bits/wchar.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
-  /usr/include/xlocale.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/xlocale.h \
+  /usr/include/bits/wchar2.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -31,15 +31,15 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/stdio.h /usr/include/libio.h /usr/include/_G_config.h \
-  /usr/include/wchar.h /usr/include/bits/stdio_lim.h \
-  /usr/include/bits/sys_errlist.h /usr/include/bits/stdio.h \
+  /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
+  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
   /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -49,6 +49,7 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   /usr/include/bits/setjmp.h /usr/include/unistd.h \
   /usr/include/bits/posix_opt.h /usr/include/bits/environments.h \
   /usr/include/bits/confname.h /usr/include/getopt.h \
+  /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -81,23 +82,23 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   /usr/include/bits/waitstatus.h /usr/include/sys/types.h \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/sys/sysmacros.h /usr/include/alloca.h \
-  /usr/include/c++/4.3/bits/algorithmfwd.h \
+  /usr/include/bits/stdlib.h /usr/include/c++/4.3/bits/algorithmfwd.h \
   /usr/include/c++/4.3/bits/stl_heap.h \
   /usr/include/c++/4.3/bits/stl_tempbuf.h \
   /usr/include/c++/4.3/bits/stl_construct.h \
   /usr/include/c++/4.3/bits/stl_uninitialized.h ../starter/starter.h \
-  ../starter/general/general.h /usr/include/stdlib.h \
-  ../starter/math/linear_algebra.h /usr/include/c++/4.3/iostream \
-  ../starter/math/linear_systems.h ../starter/math/mcvm.h \
-  /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
-  /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
-  /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
-  /usr/include/math.h /usr/include/bits/huge_val.h \
-  /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
-  /usr/include/bits/inf.h /usr/include/bits/nan.h \
-  /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h \
-  /usr/include/bits/mathinline.h /usr/local/include/opencv/cxerror.h \
-  /usr/local/include/opencv/cvver.h /usr/local/include/opencv/cxcore.hpp \
+  ../starter/general/general.h ../starter/math/linear_algebra.h \
+  /usr/include/c++/4.3/iostream ../starter/math/linear_systems.h \
+  ../starter/math/mcvm.h /usr/local/include/opencv/cv.h \
+  /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
+  /usr/include/assert.h /usr/include/string.h /usr/include/bits/string3.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h /usr/include/math.h \
+  /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
+  /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
+  /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
+  /usr/include/bits/mathcalls.h /usr/include/bits/mathinline.h \
+  /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
+  /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
   /usr/local/include/opencv/cvcompat.h \
   ../starter/math/robust_estimators.h ../starter/geometry/affinity.h \
@@ -122,6 +123,8 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 /usr/include/sys/stat.h:
 
 /usr/include/features.h:
+
+/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -161,19 +164,19 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
-
 /usr/include/xlocale.h:
+
+/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -209,19 +212,17 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 
 /usr/include/c++/4.3/cstdio:
 
-/usr/include/stdio.h:
-
 /usr/include/libio.h:
 
 /usr/include/_G_config.h:
-
-/usr/include/wchar.h:
 
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
+
+/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -240,6 +241,8 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
+
+/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -274,6 +277,8 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
+
+/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -361,6 +366,8 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 
 /usr/include/alloca.h:
 
+/usr/include/bits/stdlib.h:
+
 /usr/include/c++/4.3/bits/algorithmfwd.h:
 
 /usr/include/c++/4.3/bits/stl_heap.h:
@@ -374,8 +381,6 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 ../starter/starter.h:
 
 ../starter/general/general.h:
-
-/usr/include/stdlib.h:
 
 ../starter/math/linear_algebra.h:
 
@@ -395,7 +400,9 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 
 /usr/include/string.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+/usr/include/bits/string3.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
 
 /usr/include/math.h:
 
