--- a/starter/.deps/projection_matrix.Po
+++ b/starter/.deps/projection_matrix.Po
@@ -2,9 +2,9 @@ projection_matrix.o: geometry/projection_matrix.cpp \
   /usr/include/c++/4.3/cmath \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/sys/cdefs.h \
-  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
-  /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/bits/predefs.h \
+  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
+  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/bits/cpp_type_traits.h \
   /usr/include/c++/4.3/ext/type_traits.h /usr/include/math.h \
@@ -17,11 +17,10 @@ projection_matrix.o: geometry/projection_matrix.cpp \
   /usr/include/c++/4.3/iosfwd /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
-  /usr/include/bits/wchar.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
-  /usr/include/xlocale.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/xlocale.h \
+  /usr/include/bits/wchar2.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -34,16 +33,16 @@ projection_matrix.o: geometry/projection_matrix.cpp \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/stdio.h /usr/include/bits/types.h \
-  /usr/include/bits/typesizes.h /usr/include/libio.h \
-  /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
+  /usr/include/libio.h /usr/include/_G_config.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
+  /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -53,7 +52,7 @@ projection_matrix.o: geometry/projection_matrix.cpp \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h \
+  /usr/include/getopt.h /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -81,16 +80,16 @@ projection_matrix.o: geometry/projection_matrix.cpp \
   /usr/include/c++/4.3/i486-linux-gnu/bits/basic_file.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++io.h \
   /usr/include/c++/4.3/bits/fstream.tcc \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h math/linear_algebra.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h math/linear_algebra.h \
   geometry/projection_matrix.h /usr/local/include/opencv/cv.h \
   /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
   /usr/include/assert.h /usr/include/stdlib.h \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
   /usr/include/sys/types.h /usr/include/sys/select.h \
   /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
-  /usr/include/alloca.h /usr/include/string.h /usr/include/math.h \
-  /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
-  /usr/local/include/opencv/cxcore.hpp \
+  /usr/include/alloca.h /usr/include/bits/stdlib.h /usr/include/string.h \
+  /usr/include/bits/string3.h /usr/local/include/opencv/cxerror.h \
+  /usr/local/include/opencv/cvver.h /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
   /usr/local/include/opencv/cvcompat.h
 
@@ -101,6 +100,8 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h:
 
 /usr/include/features.h:
+
+/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -152,19 +153,19 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
-
 /usr/include/xlocale.h:
+
+/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -196,8 +197,6 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 
 /usr/include/c++/4.3/cstdio:
 
-/usr/include/stdio.h:
-
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -206,13 +205,13 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 
 /usr/include/_G_config.h:
 
-/usr/include/wchar.h:
-
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
+
+/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -231,6 +230,8 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
+
+/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -267,6 +268,8 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
+
+/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -334,7 +337,7 @@ projection_matrix.o: geometry/projection_matrix.cpp \
 
 /usr/include/c++/4.3/bits/fstream.tcc:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
 
 math/linear_algebra.h:
 
@@ -364,9 +367,11 @@ geometry/projection_matrix.h:
 
 /usr/include/alloca.h:
 
+/usr/include/bits/stdlib.h:
+
 /usr/include/string.h:
 
-/usr/include/math.h:
+/usr/include/bits/string3.h:
 
 /usr/local/include/opencv/cxerror.h:
 
