--- a/garfeild/.deps/yape.Po
+++ b/garfeild/.deps/yape.Po
@@ -2,12 +2,12 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/bits/predefs.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
   /usr/include/c++/4.3/bits/functexcept.h \
   /usr/include/c++/4.3/exception_defines.h \
   /usr/include/c++/4.3/bits/cpp_type_traits.h \
@@ -21,16 +21,15 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/bits/stl_algo.h \
   /usr/include/c++/4.3/cstdlib /usr/include/stdlib.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
-  /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/xlocale.h \
+  /usr/include/endian.h /usr/include/bits/endian.h /usr/include/xlocale.h \
   /usr/include/sys/types.h /usr/include/bits/types.h \
   /usr/include/bits/typesizes.h /usr/include/time.h \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/bits/sigset.h /usr/include/bits/time.h \
   /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h \
-  /usr/include/c++/4.3/bits/algorithmfwd.h \
+  /usr/include/alloca.h /usr/include/c++/4.3/bits/algorithmfwd.h \
   /usr/include/c++/4.3/bits/stl_heap.h \
   /usr/include/c++/4.3/bits/stl_tempbuf.h \
   /usr/include/c++/4.3/bits/stl_construct.h /usr/include/c++/4.3/new \
@@ -41,13 +40,13 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
   /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/wchar.h /usr/include/stdio.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
-  /usr/include/bits/wchar.h /usr/include/bits/wchar2.h \
-  /usr/include/stdint.h /usr/include/c++/4.3/bits/char_traits.h \
-  /usr/include/c++/4.3/cstdio /usr/include/libio.h \
-  /usr/include/_G_config.h /usr/include/bits/stdio_lim.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/stdint.h \
+  /usr/include/c++/4.3/bits/char_traits.h /usr/include/c++/4.3/cstdio \
+  /usr/include/stdio.h /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/wchar.h /usr/include/bits/stdio_lim.h \
   /usr/include/bits/sys_errlist.h /usr/include/bits/stdio.h \
-  /usr/include/bits/stdio2.h /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
@@ -59,7 +58,6 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
   /usr/include/signal.h /usr/include/bits/setjmp.h /usr/include/unistd.h \
   /usr/include/bits/posix_opt.h /usr/include/bits/environments.h \
   /usr/include/bits/confname.h /usr/include/getopt.h \
-  /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -86,17 +84,17 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
   /usr/include/c++/4.3/bits/codecvt.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/basic_file.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++io.h \
-  /usr/include/c++/4.3/bits/fstream.tcc /usr/include/math.h \
-  /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
-  /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
-  /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
-  /usr/include/bits/mathcalls.h /usr/include/bits/mathinline.h \
-  ../starter/starter.h ../starter/general/general.h \
-  ../starter/math/linear_algebra.h ../starter/math/linear_systems.h \
-  ../starter/math/mcvm.h /usr/local/include/opencv/cv.h \
-  /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
-  /usr/include/assert.h /usr/include/string.h /usr/include/bits/string3.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h \
+  /usr/include/c++/4.3/bits/fstream.tcc /usr/include/stdlib.h \
+  /usr/include/math.h /usr/include/bits/huge_val.h \
+  /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
+  /usr/include/bits/inf.h /usr/include/bits/nan.h \
+  /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h \
+  /usr/include/bits/mathinline.h ../starter/starter.h \
+  ../starter/general/general.h ../starter/math/linear_algebra.h \
+  ../starter/math/linear_systems.h ../starter/math/mcvm.h \
+  /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
+  /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
+  /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
   /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
   /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
@@ -122,8 +120,6 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/features.h:
 
-/usr/include/bits/predefs.h:
-
 /usr/include/sys/cdefs.h:
 
 /usr/include/bits/wordsize.h:
@@ -136,7 +132,7 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/c++/4.3/bits/functexcept.h:
 
@@ -168,6 +164,8 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/stdlib.h:
 
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+
 /usr/include/bits/waitflags.h:
 
 /usr/include/bits/waitstatus.h:
@@ -175,8 +173,6 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/xlocale.h:
 
@@ -201,8 +197,6 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 /usr/include/bits/pthreadtypes.h:
 
 /usr/include/alloca.h:
-
-/usr/include/bits/stdlib.h:
 
 /usr/include/c++/4.3/bits/algorithmfwd.h:
 
@@ -236,11 +230,9 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
-
-/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -248,17 +240,19 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/c++/4.3/cstdio:
 
+/usr/include/stdio.h:
+
 /usr/include/libio.h:
 
 /usr/include/_G_config.h:
+
+/usr/include/wchar.h:
 
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
-
-/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -301,8 +295,6 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
-
-/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -368,6 +360,8 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/c++/4.3/bits/fstream.tcc:
 
+/usr/include/stdlib.h:
+
 /usr/include/math.h:
 
 /usr/include/bits/huge_val.h:
@@ -406,9 +400,7 @@ yape.o: keypoints/yape.cpp /usr/include/c++/4.3/algorithm \
 
 /usr/include/string.h:
 
-/usr/include/bits/string3.h:
-
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
 /usr/local/include/opencv/cxerror.h:
 
