--- a/artvertiser/.deps/artvertiser-artvertiser.Po
+++ b/artvertiser/.deps/artvertiser-artvertiser.Po
@@ -1,18 +1,19 @@
 artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/bits/predefs.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/ostream /usr/include/c++/4.3/ios \
   /usr/include/c++/4.3/iosfwd /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
-  /usr/include/bits/wchar.h /usr/include/xlocale.h \
-  /usr/include/bits/wchar2.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
+  /usr/include/bits/wchar.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
+  /usr/include/xlocale.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -27,16 +28,16 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
-  /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/stdio.h /usr/include/bits/types.h \
+  /usr/include/bits/typesizes.h /usr/include/libio.h \
+  /usr/include/_G_config.h /usr/include/wchar.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
-  /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -46,7 +47,7 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h /usr/include/bits/unistd.h \
+  /usr/include/getopt.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -81,9 +82,8 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
   /usr/include/sys/types.h /usr/include/sys/select.h \
   /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h /usr/include/string.h \
-  /usr/include/bits/string3.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h /usr/include/math.h \
+  /usr/include/alloca.h /usr/include/string.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h /usr/include/math.h \
   /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
   /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
   /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
@@ -145,8 +145,8 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
   /usr/include/freetype2/freetype/config/ftheader.h \
   /usr/include/freetype2/freetype/config/ftoption.h \
   /usr/include/freetype2/freetype/config/ftstdlib.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include-fixed/limits.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include-fixed/syslimits.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include-fixed/limits.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include-fixed/syslimits.h \
   /usr/include/limits.h /usr/include/bits/posix1_lim.h \
   /usr/include/bits/local_lim.h /usr/include/linux/limits.h \
   /usr/include/bits/posix2_lim.h /usr/include/bits/xopen_lim.h \
@@ -180,8 +180,6 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/features.h:
 
-/usr/include/bits/predefs.h:
-
 /usr/include/sys/cdefs.h:
 
 /usr/include/bits/wordsize.h:
@@ -206,19 +204,19 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/include/xlocale.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
-/usr/include/bits/wchar2.h:
+/usr/include/xlocale.h:
 
 /usr/include/stdint.h:
 
@@ -254,6 +252,8 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstdio:
 
+/usr/include/stdio.h:
+
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -262,13 +262,13 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/_G_config.h:
 
+/usr/include/wchar.h:
+
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
-
-/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -287,8 +287,6 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -325,8 +323,6 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
-
-/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -424,13 +420,9 @@ artvertiser-artvertiser.o: artvertiser.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/alloca.h:
 
-/usr/include/bits/stdlib.h:
-
 /usr/include/string.h:
 
-/usr/include/bits/string3.h:
-
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
 /usr/include/math.h:
 
@@ -610,9 +602,9 @@ calibmodel.h:
 
 /usr/include/freetype2/freetype/config/ftstdlib.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include-fixed/limits.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include-fixed/limits.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include-fixed/syslimits.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include-fixed/syslimits.h:
 
 /usr/include/limits.h:
 
