--- a/garfeild/.deps/lightcollector.Po
+++ b/garfeild/.deps/lightcollector.Po
@@ -2,12 +2,12 @@ lightcollector.o: lightcalib/lightcollector.cpp \
   /usr/include/c++/4.3/vector /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/bits/predefs.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
   /usr/include/c++/4.3/bits/functexcept.h \
   /usr/include/c++/4.3/exception_defines.h \
   /usr/include/c++/4.3/bits/cpp_type_traits.h \
@@ -36,17 +36,16 @@ lightcollector.o: lightcalib/lightcollector.cpp \
   lightcalib/lightcollector.h /usr/local/include/opencv/cv.h \
   /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
   /usr/include/assert.h /usr/include/stdlib.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
-  /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/xlocale.h \
+  /usr/include/endian.h /usr/include/bits/endian.h /usr/include/xlocale.h \
   /usr/include/sys/types.h /usr/include/bits/types.h \
   /usr/include/bits/typesizes.h /usr/include/time.h \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/bits/sigset.h /usr/include/bits/time.h \
   /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h /usr/include/string.h \
-  /usr/include/bits/string3.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h \
+  /usr/include/alloca.h /usr/include/string.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
   /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
   /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
@@ -56,13 +55,13 @@ lightcollector.o: lightcalib/lightcollector.cpp \
   /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/wchar.h /usr/include/stdio.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
-  /usr/include/bits/wchar.h /usr/include/bits/wchar2.h \
-  /usr/include/stdint.h /usr/include/c++/4.3/bits/char_traits.h \
-  /usr/include/c++/4.3/cstdio /usr/include/libio.h \
-  /usr/include/_G_config.h /usr/include/bits/stdio_lim.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
+  /usr/include/bits/wchar.h /usr/include/stdint.h \
+  /usr/include/c++/4.3/bits/char_traits.h /usr/include/c++/4.3/cstdio \
+  /usr/include/stdio.h /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/wchar.h /usr/include/bits/stdio_lim.h \
   /usr/include/bits/sys_errlist.h /usr/include/bits/stdio.h \
-  /usr/include/bits/stdio2.h /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
@@ -74,7 +73,6 @@ lightcollector.o: lightcalib/lightcollector.cpp \
   /usr/include/signal.h /usr/include/bits/setjmp.h /usr/include/unistd.h \
   /usr/include/bits/posix_opt.h /usr/include/bits/environments.h \
   /usr/include/bits/confname.h /usr/include/getopt.h \
-  /usr/include/bits/unistd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/ostream_insert.h \
@@ -106,8 +104,6 @@ lightcollector.o: lightcalib/lightcollector.cpp \
 
 /usr/include/features.h:
 
-/usr/include/bits/predefs.h:
-
 /usr/include/sys/cdefs.h:
 
 /usr/include/bits/wordsize.h:
@@ -120,7 +116,7 @@ lightcollector.o: lightcalib/lightcollector.cpp \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/c++/4.3/bits/functexcept.h:
 
@@ -196,6 +192,8 @@ lightcalib/lightcollector.h:
 
 /usr/include/stdlib.h:
 
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
+
 /usr/include/bits/waitflags.h:
 
 /usr/include/bits/waitstatus.h:
@@ -203,8 +201,6 @@ lightcalib/lightcollector.h:
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/xlocale.h:
 
@@ -230,13 +226,9 @@ lightcalib/lightcollector.h:
 
 /usr/include/alloca.h:
 
-/usr/include/bits/stdlib.h:
-
 /usr/include/string.h:
 
-/usr/include/bits/string3.h:
-
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
 /usr/local/include/opencv/cxerror.h:
 
@@ -270,11 +262,9 @@ lightcalib/lightcollector.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
-
-/usr/include/bits/wchar2.h:
 
 /usr/include/stdint.h:
 
@@ -282,17 +272,19 @@ lightcalib/lightcollector.h:
 
 /usr/include/c++/4.3/cstdio:
 
+/usr/include/stdio.h:
+
 /usr/include/libio.h:
 
 /usr/include/_G_config.h:
+
+/usr/include/wchar.h:
 
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
-
-/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -335,8 +327,6 @@ lightcalib/lightcollector.h:
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
-
-/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
