--- a/starter/.deps/growmat.Po
+++ b/starter/.deps/growmat.Po
@@ -1,21 +1,18 @@
 growmat.o: math/growmat.cpp math/growmat.h /usr/local/include/opencv/cv.h \
   /usr/local/include/opencv/cxcore.h /usr/local/include/opencv/cxtypes.h \
-  /usr/include/assert.h /usr/include/features.h \
-  /usr/include/bits/predefs.h /usr/include/sys/cdefs.h \
+  /usr/include/assert.h /usr/include/features.h /usr/include/sys/cdefs.h \
   /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
   /usr/include/gnu/stubs-32.h /usr/include/stdlib.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
-  /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/xlocale.h \
+  /usr/include/endian.h /usr/include/bits/endian.h /usr/include/xlocale.h \
   /usr/include/sys/types.h /usr/include/bits/types.h \
   /usr/include/bits/typesizes.h /usr/include/time.h \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/bits/sigset.h /usr/include/bits/time.h \
   /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h /usr/include/string.h \
-  /usr/include/bits/string3.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h /usr/include/math.h \
+  /usr/include/alloca.h /usr/include/string.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h /usr/include/math.h \
   /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
   /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
   /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
@@ -37,8 +34,6 @@ math/growmat.h:
 
 /usr/include/features.h:
 
-/usr/include/bits/predefs.h:
-
 /usr/include/sys/cdefs.h:
 
 /usr/include/bits/wordsize.h:
@@ -49,7 +44,7 @@ math/growmat.h:
 
 /usr/include/stdlib.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/bits/waitflags.h:
 
@@ -58,8 +53,6 @@ math/growmat.h:
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/xlocale.h:
 
@@ -85,13 +78,9 @@ math/growmat.h:
 
 /usr/include/alloca.h:
 
-/usr/include/bits/stdlib.h:
-
 /usr/include/string.h:
 
-/usr/include/bits/string3.h:
-
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
 /usr/include/math.h:
 
