--- a/starter/.deps/linear_algebra.Po
+++ b/starter/.deps/linear_algebra.Po
@@ -1,18 +1,19 @@
 linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/bits/predefs.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/ostream /usr/include/c++/4.3/ios \
   /usr/include/c++/4.3/iosfwd /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
-  /usr/include/bits/wchar.h /usr/include/xlocale.h \
-  /usr/include/bits/wchar2.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
+  /usr/include/bits/wchar.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
+  /usr/include/xlocale.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -27,16 +28,16 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
-  /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/stdio.h /usr/include/bits/types.h \
+  /usr/include/bits/typesizes.h /usr/include/libio.h \
+  /usr/include/_G_config.h /usr/include/wchar.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
-  /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -46,7 +47,7 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h /usr/include/bits/unistd.h \
+  /usr/include/getopt.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -78,7 +79,7 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
   /usr/include/sys/types.h /usr/include/sys/select.h \
   /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h
+  /usr/include/alloca.h
 
 /usr/include/c++/4.3/iostream:
 
@@ -87,8 +88,6 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h:
 
 /usr/include/features.h:
-
-/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -114,19 +113,19 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/include/xlocale.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
-/usr/include/bits/wchar2.h:
+/usr/include/xlocale.h:
 
 /usr/include/stdint.h:
 
@@ -162,6 +161,8 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/c++/4.3/cstdio:
 
+/usr/include/stdio.h:
+
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -170,13 +171,13 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 
 /usr/include/_G_config.h:
 
+/usr/include/wchar.h:
+
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
-
-/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -195,8 +196,6 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -233,8 +232,6 @@ linear_algebra.o: math/linear_algebra.cpp /usr/include/c++/4.3/iostream \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
-
-/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -329,5 +326,3 @@ general/general.h:
 /usr/include/sys/sysmacros.h:
 
 /usr/include/alloca.h:
-
-/usr/include/bits/stdlib.h:
