--- a/starter/.deps/ls_minimizer2.Po
+++ b/starter/.deps/ls_minimizer2.Po
@@ -2,18 +2,19 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
   /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++config.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h \
-  /usr/include/features.h /usr/include/bits/predefs.h \
-  /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h \
-  /usr/include/gnu/stubs.h /usr/include/gnu/stubs-32.h \
+  /usr/include/features.h /usr/include/sys/cdefs.h \
+  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
+  /usr/include/gnu/stubs-32.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/cpu_defines.h \
   /usr/include/c++/4.3/ostream /usr/include/c++/4.3/ios \
   /usr/include/c++/4.3/iosfwd /usr/include/c++/4.3/bits/stringfwd.h \
   /usr/include/c++/4.3/bits/postypes.h /usr/include/c++/4.3/cwchar \
   /usr/include/c++/4.3/cstddef \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h /usr/include/wchar.h \
-  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h \
-  /usr/include/bits/wchar.h /usr/include/xlocale.h \
-  /usr/include/bits/wchar2.h /usr/include/stdint.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h /usr/include/wchar.h \
+  /usr/include/stdio.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h \
+  /usr/include/bits/wchar.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h \
+  /usr/include/xlocale.h /usr/include/stdint.h \
   /usr/include/c++/4.3/exception /usr/include/c++/4.3/bits/char_traits.h \
   /usr/include/c++/4.3/bits/stl_algobase.h \
   /usr/include/c++/4.3/bits/functexcept.h \
@@ -28,16 +29,16 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
   /usr/include/c++/4.3/bits/stl_iterator_base_funcs.h \
   /usr/include/c++/4.3/bits/stl_iterator.h \
   /usr/include/c++/4.3/debug/debug.h /usr/include/c++/4.3/cstdio \
-  /usr/include/bits/types.h /usr/include/bits/typesizes.h \
-  /usr/include/libio.h /usr/include/_G_config.h \
+  /usr/include/stdio.h /usr/include/bits/types.h \
+  /usr/include/bits/typesizes.h /usr/include/libio.h \
+  /usr/include/_G_config.h /usr/include/wchar.h \
   /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/bits/stdio2.h \
-  /usr/include/c++/4.3/bits/localefwd.h \
+  /usr/include/bits/stdio.h /usr/include/c++/4.3/bits/localefwd.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/c++locale.h \
   /usr/include/c++/4.3/clocale /usr/include/locale.h \
   /usr/include/bits/locale.h /usr/include/c++/4.3/cctype \
   /usr/include/ctype.h /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/c++/4.3/bits/ios_base.h \
+  /usr/include/c++/4.3/bits/ios_base.h \
   /usr/include/c++/4.3/ext/atomicity.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/gthr-default.h \
@@ -47,7 +48,7 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
   /usr/include/bits/pthreadtypes.h /usr/include/bits/setjmp.h \
   /usr/include/unistd.h /usr/include/bits/posix_opt.h \
   /usr/include/bits/environments.h /usr/include/bits/confname.h \
-  /usr/include/getopt.h /usr/include/bits/unistd.h \
+  /usr/include/getopt.h \
   /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h \
   /usr/include/c++/4.3/bits/locale_classes.h /usr/include/c++/4.3/string \
   /usr/include/c++/4.3/bits/allocator.h \
@@ -76,16 +77,15 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
   /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h \
   /usr/include/sys/types.h /usr/include/sys/select.h \
   /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
-  /usr/include/alloca.h /usr/include/bits/stdlib.h \
-  /usr/include/c++/4.3/bits/algorithmfwd.h \
+  /usr/include/alloca.h /usr/include/c++/4.3/bits/algorithmfwd.h \
   /usr/include/c++/4.3/bits/stl_heap.h \
   /usr/include/c++/4.3/bits/stl_tempbuf.h \
   /usr/include/c++/4.3/bits/stl_construct.h \
   /usr/include/c++/4.3/bits/stl_uninitialized.h math/mcvm.h \
   /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
   /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
-  /usr/include/string.h /usr/include/bits/string3.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h /usr/include/math.h \
+  /usr/include/stdlib.h /usr/include/string.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h /usr/include/math.h \
   /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
   /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
   /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
@@ -107,8 +107,6 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 /usr/include/c++/4.3/i486-linux-gnu/bits/os_defines.h:
 
 /usr/include/features.h:
-
-/usr/include/bits/predefs.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -134,19 +132,19 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 
 /usr/include/c++/4.3/cstddef:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stddef.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
 /usr/include/wchar.h:
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/stdarg.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stdarg.h:
 
 /usr/include/bits/wchar.h:
 
-/usr/include/xlocale.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/stddef.h:
 
-/usr/include/bits/wchar2.h:
+/usr/include/xlocale.h:
 
 /usr/include/stdint.h:
 
@@ -182,6 +180,8 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 
 /usr/include/c++/4.3/cstdio:
 
+/usr/include/stdio.h:
+
 /usr/include/bits/types.h:
 
 /usr/include/bits/typesizes.h:
@@ -190,13 +190,13 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 
 /usr/include/_G_config.h:
 
+/usr/include/wchar.h:
+
 /usr/include/bits/stdio_lim.h:
 
 /usr/include/bits/sys_errlist.h:
 
 /usr/include/bits/stdio.h:
-
-/usr/include/bits/stdio2.h:
 
 /usr/include/c++/4.3/bits/localefwd.h:
 
@@ -215,8 +215,6 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 /usr/include/endian.h:
 
 /usr/include/bits/endian.h:
-
-/usr/include/bits/byteswap.h:
 
 /usr/include/c++/4.3/bits/ios_base.h:
 
@@ -253,8 +251,6 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 /usr/include/bits/confname.h:
 
 /usr/include/getopt.h:
-
-/usr/include/bits/unistd.h:
 
 /usr/include/c++/4.3/i486-linux-gnu/bits/atomic_word.h:
 
@@ -336,8 +332,6 @@ ls_minimizer2.o: optimization/ls_minimizer2.cpp \
 
 /usr/include/alloca.h:
 
-/usr/include/bits/stdlib.h:
-
 /usr/include/c++/4.3/bits/algorithmfwd.h:
 
 /usr/include/c++/4.3/bits/stl_heap.h:
@@ -358,11 +352,11 @@ math/mcvm.h:
 
 /usr/include/assert.h:
 
+/usr/include/stdlib.h:
+
 /usr/include/string.h:
 
-/usr/include/bits/string3.h:
-
-/usr/lib/gcc/i486-linux-gnu/4.3.4/include/float.h:
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
 /usr/include/math.h:
 
