--- a/garfeild/.deps/object_view.Po
+++ b/garfeild/.deps/object_view.Po
@@ -80,6 +80,10 @@ object_view.o: viewsets/object_view.cpp /usr/include/c++/4.3/iostream \
   /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
   /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
   /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
   /usr/include/math.h /usr/include/bits/huge_val.h \
   /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
   /usr/include/bits/inf.h /usr/include/bits/nan.h \
@@ -100,7 +104,19 @@ object_view.o: viewsets/object_view.cpp /usr/include/c++/4.3/iostream \
   /usr/include/c++/4.3/bits/vector.tcc /usr/local/include/opencv/cxcore.h \
   ../starter/optimization/ls_step_solver.h viewsets/object_view.h \
   keypoints/keypoint.h keypoints/yape.h keypoints/keypoint.h \
-  viewsets/image_object_point_match.h viewsets/object_keypoint.h
+  viewsets/image_object_point_match.h viewsets/object_keypoint.h \
+  viewsets/../../artvertiser/FProfiler/FSemaphore.h \
+  /usr/include/semaphore.h /usr/include/bits/semaphore.h \
+  /usr/include/sys/errno.h /usr/include/errno.h /usr/include/bits/errno.h \
+  /usr/include/linux/errno.h /usr/include/asm/errno.h \
+  /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
+  /usr/include/malloc.h viewsets/../../artvertiser/FProfiler/FProfiler.h \
+  viewsets/../../artvertiser/FProfiler/FSemaphore.h \
+  viewsets/../../artvertiser/FProfiler/FTime.h \
+  viewsets/../../artvertiser/FProfiler/FThread.h /usr/include/c++/4.3/map \
+  /usr/include/c++/4.3/bits/stl_tree.h \
+  /usr/include/c++/4.3/bits/stl_map.h \
+  /usr/include/c++/4.3/bits/stl_multimap.h
 
 /usr/include/c++/4.3/iostream:
 
@@ -348,6 +364,14 @@ object_view.o: viewsets/object_view.cpp /usr/include/c++/4.3/iostream \
 
 /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
+
 /usr/include/math.h:
 
 /usr/include/bits/huge_val.h:
@@ -421,3 +445,41 @@ keypoints/keypoint.h:
 viewsets/image_object_point_match.h:
 
 viewsets/object_keypoint.h:
+
+viewsets/../../artvertiser/FProfiler/FSemaphore.h:
+
+/usr/include/semaphore.h:
+
+/usr/include/bits/semaphore.h:
+
+/usr/include/sys/errno.h:
+
+/usr/include/errno.h:
+
+/usr/include/bits/errno.h:
+
+/usr/include/linux/errno.h:
+
+/usr/include/asm/errno.h:
+
+/usr/include/asm-generic/errno.h:
+
+/usr/include/asm-generic/errno-base.h:
+
+/usr/include/malloc.h:
+
+viewsets/../../artvertiser/FProfiler/FProfiler.h:
+
+viewsets/../../artvertiser/FProfiler/FSemaphore.h:
+
+viewsets/../../artvertiser/FProfiler/FTime.h:
+
+viewsets/../../artvertiser/FProfiler/FThread.h:
+
+/usr/include/c++/4.3/map:
+
+/usr/include/c++/4.3/bits/stl_tree.h:
+
+/usr/include/c++/4.3/bits/stl_map.h:
+
+/usr/include/c++/4.3/bits/stl_multimap.h:
