--- a/garfeild/.deps/keypoint_orientation_corrector.Po
+++ b/garfeild/.deps/keypoint_orientation_corrector.Po
@@ -87,6 +87,10 @@ keypoint_orientation_corrector.o:  \
   /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
   /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
   /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
   /usr/include/math.h /usr/local/include/opencv/cxerror.h \
   /usr/local/include/opencv/cvver.h /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
@@ -371,6 +375,14 @@ keypoint_orientation_corrector.o:  \
 /usr/include/string.h:
 
 /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
 
 /usr/include/math.h:
 
