--- a/garfeild/.deps/planar_object_recognizer.Po
+++ b/garfeild/.deps/planar_object_recognizer.Po
@@ -92,6 +92,10 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
   /usr/local/include/opencv/cxtypes.h /usr/include/assert.h \
   /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
   /usr/include/math.h /usr/include/bits/huge_val.h \
   /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
   /usr/include/bits/inf.h /usr/include/bits/nan.h \
@@ -117,7 +121,18 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
   viewsets/object_view.h viewsets/image_classification_forest.h \
   viewsets/image_classifier.h viewsets/image_classification_tree.h \
   viewsets/image_classification_node.h \
-  viewsets/image_object_point_match.h
+  viewsets/image_object_point_match.h \
+  ../artvertiser/FProfiler/FSemaphore.h /usr/include/semaphore.h \
+  /usr/include/bits/semaphore.h /usr/include/sys/errno.h \
+  /usr/include/errno.h /usr/include/bits/errno.h \
+  /usr/include/linux/errno.h /usr/include/asm/errno.h \
+  /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
+  /usr/include/malloc.h ../artvertiser/FProfiler/FProfiler.h \
+  ../artvertiser/FProfiler/FSemaphore.h ../artvertiser/FProfiler/FTime.h \
+  ../artvertiser/FProfiler/FThread.h /usr/include/c++/4.3/map \
+  /usr/include/c++/4.3/bits/stl_tree.h \
+  /usr/include/c++/4.3/bits/stl_map.h \
+  /usr/include/c++/4.3/bits/stl_multimap.h
 
 /usr/include/sys/stat.h:
 
@@ -397,6 +412,14 @@ planar_object_recognizer.o: viewsets/planar_object_recognizer.cpp \
 
 /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
+
 /usr/include/math.h:
 
 /usr/include/bits/huge_val.h:
@@ -488,3 +511,41 @@ viewsets/image_classification_tree.h:
 viewsets/image_classification_node.h:
 
 viewsets/image_object_point_match.h:
+
+../artvertiser/FProfiler/FSemaphore.h:
+
+/usr/include/semaphore.h:
+
+/usr/include/bits/semaphore.h:
+
+/usr/include/sys/errno.h:
+
+/usr/include/errno.h:
+
+/usr/include/bits/errno.h:
+
+/usr/include/linux/errno.h:
+
+/usr/include/asm/errno.h:
+
+/usr/include/asm-generic/errno.h:
+
+/usr/include/asm-generic/errno-base.h:
+
+/usr/include/malloc.h:
+
+../artvertiser/FProfiler/FProfiler.h:
+
+../artvertiser/FProfiler/FSemaphore.h:
+
+../artvertiser/FProfiler/FTime.h:
+
+../artvertiser/FProfiler/FThread.h:
+
+/usr/include/c++/4.3/map:
+
+/usr/include/c++/4.3/bits/stl_tree.h:
+
+/usr/include/c++/4.3/bits/stl_map.h:
+
+/usr/include/c++/4.3/bits/stl_multimap.h:
