--- a/starter/.deps/affinity.Po
+++ b/starter/.deps/affinity.Po
@@ -78,15 +78,35 @@ affinity.o: geometry/affinity.cpp geometry/affinity.h \
   /usr/include/sys/types.h /usr/include/sys/select.h \
   /usr/include/bits/select.h /usr/include/sys/sysmacros.h \
   /usr/include/alloca.h /usr/include/string.h \
-  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h /usr/include/math.h \
-  /usr/include/bits/huge_val.h /usr/include/bits/huge_valf.h \
-  /usr/include/bits/huge_vall.h /usr/include/bits/inf.h \
-  /usr/include/bits/nan.h /usr/include/bits/mathdef.h \
-  /usr/include/bits/mathcalls.h /usr/include/bits/mathinline.h \
-  /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
-  /usr/local/include/opencv/cxcore.hpp \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
+  /usr/include/math.h /usr/include/bits/huge_val.h \
+  /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h \
+  /usr/include/bits/inf.h /usr/include/bits/nan.h \
+  /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h \
+  /usr/include/bits/mathinline.h /usr/local/include/opencv/cxerror.h \
+  /usr/local/include/opencv/cvver.h /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
-  /usr/local/include/opencv/cvcompat.h
+  /usr/local/include/opencv/cvcompat.h \
+  geometry/../../artvertiser/FProfiler/FProfiler.h \
+  geometry/../../artvertiser/FProfiler/FSemaphore.h \
+  /usr/include/semaphore.h /usr/include/bits/semaphore.h \
+  /usr/include/sys/errno.h /usr/include/errno.h /usr/include/bits/errno.h \
+  /usr/include/linux/errno.h /usr/include/asm/errno.h \
+  /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
+  /usr/include/malloc.h geometry/../../artvertiser/FProfiler/FTime.h \
+  geometry/../../artvertiser/FProfiler/FThread.h /usr/include/c++/4.3/map \
+  /usr/include/c++/4.3/bits/stl_tree.h \
+  /usr/include/c++/4.3/bits/stl_map.h \
+  /usr/include/c++/4.3/bits/stl_multimap.h /usr/include/c++/4.3/vector \
+  /usr/include/c++/4.3/bits/stl_construct.h \
+  /usr/include/c++/4.3/bits/stl_uninitialized.h \
+  /usr/include/c++/4.3/bits/stl_vector.h \
+  /usr/include/c++/4.3/bits/stl_bvector.h \
+  /usr/include/c++/4.3/bits/vector.tcc
 
 geometry/affinity.h:
 
@@ -326,6 +346,14 @@ geometry/affinity.h:
 
 /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
 
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
+
 /usr/include/math.h:
 
 /usr/include/bits/huge_val.h:
@@ -355,3 +383,51 @@ geometry/affinity.h:
 /usr/local/include/opencv/cv.hpp:
 
 /usr/local/include/opencv/cvcompat.h:
+
+geometry/../../artvertiser/FProfiler/FProfiler.h:
+
+geometry/../../artvertiser/FProfiler/FSemaphore.h:
+
+/usr/include/semaphore.h:
+
+/usr/include/bits/semaphore.h:
+
+/usr/include/sys/errno.h:
+
+/usr/include/errno.h:
+
+/usr/include/bits/errno.h:
+
+/usr/include/linux/errno.h:
+
+/usr/include/asm/errno.h:
+
+/usr/include/asm-generic/errno.h:
+
+/usr/include/asm-generic/errno-base.h:
+
+/usr/include/malloc.h:
+
+geometry/../../artvertiser/FProfiler/FTime.h:
+
+geometry/../../artvertiser/FProfiler/FThread.h:
+
+/usr/include/c++/4.3/map:
+
+/usr/include/c++/4.3/bits/stl_tree.h:
+
+/usr/include/c++/4.3/bits/stl_map.h:
+
+/usr/include/c++/4.3/bits/stl_multimap.h:
+
+/usr/include/c++/4.3/vector:
+
+/usr/include/c++/4.3/bits/stl_construct.h:
+
+/usr/include/c++/4.3/bits/stl_uninitialized.h:
+
+/usr/include/c++/4.3/bits/stl_vector.h:
+
+/usr/include/c++/4.3/bits/stl_bvector.h:
+
+/usr/include/c++/4.3/bits/vector.tcc:
