--- a/starter/.deps/homography.Po
+++ b/starter/.deps/homography.Po
@@ -83,6 +83,10 @@ homography.o: geometry/homography.cpp /usr/include/c++/4.3/iostream \
   /usr/include/alloca.h geometry/affinity.h /usr/include/assert.h \
   /usr/local/include/opencv/cv.h /usr/local/include/opencv/cxcore.h \
   /usr/local/include/opencv/cxtypes.h /usr/include/string.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
   /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
   /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
@@ -347,6 +351,14 @@ geometry/affinity.h:
 /usr/local/include/opencv/cxtypes.h:
 
 /usr/include/string.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
 
 /usr/local/include/opencv/cxerror.h:
 
