--- a/starter/.deps/mcv.Po
+++ b/starter/.deps/mcv.Po
@@ -82,6 +82,10 @@ mcv.o: image/mcv.cpp /usr/include/c++/4.3/iostream \
   /usr/include/sys/select.h /usr/include/bits/select.h \
   /usr/include/sys/sysmacros.h /usr/include/alloca.h \
   /usr/include/string.h /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h \
+  /usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h \
   /usr/local/include/opencv/cxerror.h /usr/local/include/opencv/cvver.h \
   /usr/local/include/opencv/cxcore.hpp \
   /usr/local/include/opencv/cvtypes.h /usr/local/include/opencv/cv.hpp \
@@ -341,6 +345,14 @@ mcv.o: image/mcv.cpp /usr/include/c++/4.3/iostream \
 /usr/include/string.h:
 
 /usr/lib/gcc/i486-linux-gnu/4.3.2/include/float.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/emmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/xmmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mmintrin.h:
+
+/usr/lib/gcc/i486-linux-gnu/4.3.2/include/mm_malloc.h:
 
 /usr/local/include/opencv/cxerror.h:
 
